# pymlg

./: .gitignore  CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py  test_SO3.py
.github/workflows/: publish_docs.yml  test-package.yml  test_docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  se2.rst  se23.rst  sl3.rst
examples/: ex_jax_so3.py  ex_se2.py  ex_so3.py
mlg/: SO3.py  __init__.py  mlg.py
pylie/: __init__.py  base.py  so3.py
pylie/cpp/: __init__.py  base.h  bindings.cpp  liegroups.h  se23.h  se3.h  sl3.h  so3.h  wrapper.py
pylie/jax/: __init__.py  base.py  se23.py  se3.py  so2.py  so3.py
pylie/numpy/: __init__.py  base.py  se2.py  se23.py  se3.py  sl3.py  so2.py  so3.py
pylie/torch/: __init__.py  base.py  se23.py  se3.py  so3.py  utils.py
pymlg/: __init__.py
pymlg/cpp/: base.h  bindings.cpp  liegroups.h  se23.h  se3.h  sl3.h  so3.h  wrapper.py
pymlg/jax/: base.py  se2.py  se23.py  se3.py  sl3.py  so2.py  so3.py
pymlg/numpy/: se2.py  se23.py  se3.py  sl3.py  so2.py  so3.py
pymlg/torch/: __init__.py  base.py  se2.py  se23.py  se3.py  so2.py  so3.py  utils.py
source/: index.rst
source/_autosummary/: pymlg.SE2.rst  pymlg.SE23.rst  pymlg.SO2.rst
tests/: standard_tests.py  standard_tests_torch.py
tests/cpp/: CMakeLists.txt  test_se3.cpp  test_so3.cpp  test_standard_cpp.py
tests/jax/: test_standard_jax.py
tests/numpy/: common.py  test_groups.py  test_se2.py  test_se23.py  test_se3.py  test_so2.py  test_so3.py  test_standard_numpy.py
tests/torch/: test_so3_torch.py  test_standard_torch.py
(+1 files in other folders)
